# .528

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  README.md
apps/srs_admin/: Cargo.toml
apps/srs_admin/src/: main.rs
apps/srs_cli/: Cargo.toml
apps/srs_cli/src/: main.rs
apps/srs_cli/tests/: licensing.rs  playback_srsv2.rs
apps/srs_license_server/: Cargo.toml
apps/srs_license_server/src/: main.rs
apps/srs_player/: Cargo.toml
apps/srs_player/src/: main.rs
benchmarks/: Cargo.toml
benchmarks/benches/: bitio_entropy.rs  encode_decode.rs  seek_latency.rs
benchmarks/src/: lib.rs
config/: srs.toml
crates/libsrs_app_config/: Cargo.toml
crates/libsrs_app_config/src/: lib.rs
crates/libsrs_app_services/: Cargo.toml
crates/libsrs_app_services/src/: import_pipeline.rs  lib.rs  playback.rs
crates/libsrs_audio/: Cargo.toml
crates/libsrs_audio/src/: bitstream.rs  codec.rs  error.rs  lib.rs  lpc.rs
crates/libsrs_bitio/: Cargo.toml
crates/libsrs_bitio/src/: bit_io.rs  error.rs  lib.rs  rans.rs  varint.rs
crates/libsrs_compat/: Cargo.toml
crates/libsrs_compat/src/: ffmpeg_backend.rs  lib.rs  probe.rs  stub.rs
crates/libsrs_container/: Cargo.toml
crates/libsrs_container/src/: codec_ids.rs  crc.rs  format.rs  io.rs  lib.rs  resync.rs
crates/libsrs_contract/: Cargo.toml
crates/libsrs_contract/src/: ids.rs  lib.rs  timebase.rs  types.rs
crates/libsrs_demux/: Cargo.toml
crates/libsrs_demux/src/: lib.rs
crates/libsrs_licensing_client/: Cargo.toml
crates/libsrs_licensing_client/src/: lib.rs
crates/libsrs_licensing_proto/: Cargo.toml
crates/libsrs_licensing_proto/src/: lib.rs
crates/libsrs_mux/: Cargo.toml
crates/libsrs_mux/src/: lib.rs
crates/libsrs_pipeline/: Cargo.toml
crates/libsrs_pipeline/src/: lib.rs  normalized.rs
crates/libsrs_video/: Cargo.toml
crates/libsrs_video/src/: bitstream.rs  codec.rs  error.rs  lib.rs
crates/libsrs_video/src/srsv2/: activity.rs  adaptive_quant.rs  b_frame_codec.rs  block_aq.rs  color.rs  context_inter_entropy.rs  ctu64.rs  dct.rs  deblock.rs  elementary.rs  error.rs  frame.rs  frame_codec.rs  gpu_traits.rs  inter_mv.rs  intra_codec.rs  limits.rs  mod.rs  model.rs  motion_search.rs  p_frame_codec.rs  p_var_partition.rs  partition_syntax_v2.rs  payload_kind.rs  rate_control.rs  rdo.rs  reference.rs  reference_manager.rs  residual_context_entropy.rs  residual_entropy.rs  residual_token_v2.rs  residual_tokens.rs  subpel.rs  superchunk.rs  transform_layout.rs
docs/: 528_container_format.md  adaptive_quantization.md  color_pipeline.md  ctu64_superblock_plan.md  deblock_filter.md  gentoo_baseline_results.md  gentoo_dev_environment.md  gpu_future.md  h264_competition_plan.md  hevc_competition_plan.md  motion_search.md  next_codec_block.md  next_codec_move.md  next_hevc_codec_block.md  partition_syntax_v2.md  platform_adoption_plan.md  platform_readiness_checklist.md  playback_pipeline.md  rate_control.md  srsv2_benchmarks.md  srsv2_codec.md  srsv2_design_targets.md  transform_grouping_block5_expansion.md  video_bitstream_v2.md  windows_dev_baseline.md  windows_h264_progress_results.md  windows_hevc_progress_results.md
docs/adr/: ADR-0001-language-and-workspace.md  ADR-0002-native-vs-compat-layer.md  ADR-0003-bitstream-goals.md  ADR-0004-container-goals.md  ADR-0005-quality-testing.md  ADR-0006-runtime-entitlement-boundaries.md
docs/plans/: agent1_codec_plan.md  agent2_container_plan.md  agent3_integration_plan.md  master_plan.md
docs/plans/logs/: agent1_log.md  agent2_log.md  agent3_log.md
docs/specs/: architecture_overview.md  audio_bitstream.md  compatibility_layer.md  container_format.md  licensing_and_editions.md  packet_layout.md  player_architecture.md  rate_control.md  supported_codecs.md  timing_and_sync.md  video_bitstream.md
samples/: README.md  sample.srsm  sample_audio.pcm16le  sample_audio.srsa  sample_video.raw  sample_video.srsv
samples/bench/: golden_64x64_10.meta.json  golden_64x64_10.yuv
tests/conformance/: Cargo.toml
tests/conformance/src/: lib.rs
tests/container/: Cargo.toml
tests/container/tests/: roundtrip.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: basic_flow.rs
tests/fuzz/: Cargo.toml
tests/fuzz/corpus/container_parser_demux_reader/: README.md  seed_srsm_header_only  seed_srsm_packet_like  seed_srsm_with_cue_and_index
tests/fuzz/fuzz_targets/: container_parser_demux_reader.rs
tests/fuzz/src/: lib.rs
tools/: gentoo_bench_baseline.sh  gentoo_dev_check.sh  run_gentoo.sh  run_unix.sh  run_windows.cmd  run_windows.ps1  windows_h264_progress_baseline.ps1  windows_hevc_progress_baseline.ps1
tools/bitstream_dump/: Cargo.toml
tools/bitstream_dump/src/: main.rs
tools/codec_compare/: Cargo.toml
tools/codec_compare/src/: lib.rs  main.rs
tools/container_inspector/: Cargo.toml
tools/container_inspector/src/: main.rs
tools/fuzz_seed_gen/: Cargo.toml
tools/fuzz_seed_gen/src/: main.rs
tools/quality_metrics/: Cargo.toml
tools/quality_metrics/src/: display_order.rs  hevc_compare.rs  lib.rs  srsv2_progress_report.rs  srsv2_sweep.rs  synthetic.rs  x265_bitrate_match.rs
tools/quality_metrics/tests/: bench_entropy_models_e2e.rs  bench_residual_and_sweep_e2e.rs  bench_validation_e2e.rs  golden_bench_e2e.rs  readme_benchmark_snippets.rs
