[package]
name = "srs_benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
libsrs_bitio = { path = "../crates/libsrs_bitio" }
libsrs_contract = { path = "../crates/libsrs_contract" }
libsrs_container = { path = "../crates/libsrs_container" }
libsrs_mux = { path = "../crates/libsrs_mux" }
libsrs_pipeline = { path = "../crates/libsrs_pipeline" }
libsrs_video = { path = "../crates/libsrs_video" }

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "encode_decode"
harness = false

[[bench]]
name = "seek_latency"
harness = false

[[bench]]
name = "bitio_entropy"
harness = false
