[package]
name = "srs_player"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
eframe = "0.33"
egui = "0.33"
libsrs_app_config = { version = "0.1.0", path = "../../crates/libsrs_app_config" }
libsrs_app_services = { version = "0.1.0", path = "../../crates/libsrs_app_services" }
libsrs_licensing_client = { version = "0.1.0", path = "../../crates/libsrs_licensing_client" }
libsrs_licensing_proto = { path = "../../crates/libsrs_licensing_proto" }
rfd = "0.17.2"
