[package]
name = "libsrs_licensing_proto"
edition.workspace = true
license.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.149"
thiserror.workspace = true
