[package]
name = "libsrs_pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
libsrs_audio = { path = "../libsrs_audio" }
libsrs_contract = { path = "../libsrs_contract" }
libsrs_compat = { path = "../libsrs_compat" }
libsrs_video = { path = "../libsrs_video" }
