[package]
name = "srs_fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libsrs_contract]
path = "../../crates/libsrs_contract"

[[bin]]
name = "container_parser_demux_reader"
path = "fuzz_targets/container_parser_demux_reader.rs"
test = false
doc = false
