[package]
name = "quality_metrics"
version = "0.1.0"
edition = "2021"

[lib]
name = "quality_metrics"
path = "src/lib.rs"

[[bin]]
name = "gen_synthetic_yuv"
path = "src/bin/gen_synthetic_yuv.rs"

[[bin]]
name = "bench_srsv2"
path = "src/bin/bench_srsv2.rs"

[[bin]]
name = "srsv2_h264_progress"
path = "src/bin/srsv2_h264_progress.rs"

[dependencies]
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
clap = { version = "4", features = ["derive"] }
libsrs_video = { path = "../../crates/libsrs_video" }
thiserror.workspace = true
